sugar-toolkit (0.82.11-1) UNRELEASED; urgency=low

  * New upstream release.
  * Drop patch 1002 now applied upstream.
  * Drop patch 1003 no longer relevant (upstream routine rewritten).
  * Update debian/copyright and copyright hints (new copyright holders
    and years, same licenses).

 -- Jonas Smedegaard <dr@jones.dk>  Sun, 19 Oct 2008 11:10:44 +0200

sugar-toolkit (0.82.0-2) UNRELEASED; urgency=low

  * Depend on ${misc:Depends}.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 07 Oct 2008 11:43:31 +0200

sugar-toolkit (0.82.0-1) unstable; urgency=low

  * New upstream release.
  * Unfuzz patch 2991.
  * Add DEB_MAINTAINER_MODE in debian/rules (thanks to Romain Beauxis).
  * Update copyright-hints.

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 07 Aug 2008 19:43:09 +0200

sugar-toolkit (0.81.8-2) unstable; urgency=low

  * Re-release, setting distribution hint properly.

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 07 Aug 2008 05:26:47 +0200

sugar-toolkit (0.81.8-1) UNRELEASED; urgency=low

  * New upstream release.
  * Drop patch 0001 now included upstream.
  * Unfuzz patches 2002 and 2991.
  * Update patch 1001 (danish locale).
  * Update local cdbs snippets:
    + Minor improvements to local makefile* and autotools* snippets.
    + Minor improvements to copyright-check.mk.
    + Add new local package-relations.mk to merge duplicate
      build-dependencies and more.  Drop cleanup in debian/rules.
    + Update README.cdbs-tweaks.
  * Update debian/copyright (bump autotools copyright years).  Update
    copyright hints.

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 07 Aug 2008 04:44:34 +0200

sugar-toolkit (0.81.6-2) unstable; urgency=medium

  * Add patch 1003 to nest try-except in try-except-finally construct,
    for Python < 2.5 compatibility.
  * Keep urgency=high to still attempt reaching Lenny before freezing.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 15 Jul 2008 10:13:43 +0200

sugar-toolkit (0.81.6-1) unstable; urgency=medium

  * New upstream release.